--- a/_demo/css/sokoban.css
+++ b/_demo/css/sokoban.css
@@ -24,3 +24,17 @@ canvas {
 */
 background-color: transparent;
 }
+
+/* For better errormessages. */
+.alert {
+    padding: 15px;
+    margin-bottom: 20px;
+    border: 1px solid transparent;
+    border-radius: 4px;
+}
+
+.alert-danger {
+    color: #a94442;
+    background-color: #f2dede;
+    border-color: #ebccd1;
+}
