--- a/_demo/css/sokoban.css
+++ b/_demo/css/sokoban.css
@@ -10,6 +10,7 @@ body {
 body {
     margin: 0;
     display: flex;
+    flex-direction: column;
 
     /* This centers our sketch horizontally. */
     justify-content: center;
@@ -37,4 +38,10 @@ background-color: transparent;
     color: #a94442;
     background-color: #f2dede;
     border-color: #ebccd1;
+}
+
+.alert-warning {
+    color: #8a6d3b;
+    background-color: #fcf8e3;
+    border-color: #faebcc;
 }
